fixed some alignments

--- a/style.css
+++ b/style.css
@@ -87,6 +87,7 @@ body{
   font-family: 'Dosis', sans-serif;
   font-size: 20px;
   align-self: flex-end;
+  text-align: center;
   opacity: 1.0;
   animation-name: pulse;
   animation-duration: 3s;
